[package]
name = "crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
structopt = { version = "0.3", features = [ "paw" ] }
futures = "0.3.16"
csv = "1.1"
csv-async = { version = "1.2.1", features = ["tokio", "with_serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
reqwest = "0.11.7"

[dev-dependencies]
warp = { version = "0.3", features = ["tls"] }
